# donate4fun

./: .dockerignore  .gitattributes  .gitignore  .sops.yaml  DEPLOY.md  Dockerfile  LICENSE  README.md  TODO.md  alembic.ini  config-test.yaml  conftest.py  copy-cert.sh  deploy-donate4fun.sh  deploy.sh  docker-compose.yaml  forward-ports.sh  instruction-for-amo.md  lnd-port-foward.sh  lnurl-auth-login.py  make-extensions.sh  pyproject.toml  pytest.ini  rtl-port-foward.sh  tox.ini
.github/: FUNDING.yml
.github/workflows/: build-backend.yaml  build-extension.yaml  build-frontend.yaml  flake8-lint.yaml  test-backend.yaml
alembic/: env.py
charts/: donate4fun.stage.yaml  donate4fun.yaml  lnd.yaml  postgresql.yaml  secrets.donate4fun.yaml  secrets.lnd.yaml
charts/donate4fun/: Chart.yaml  values.yaml
charts/lnd/: Chart.yaml  README.md  values.yaml
charts/lnd/templates/: NOTES.txt  (+6 more)
charts/rtl/: Chart.yaml  values.yaml
charts/tor/: Chart.yaml  values.yaml
configs/: RTL-Config.json  RTL-Config.sops.json  donate4fun.sops.yaml  donate4fun.yaml  lnd.conf  lnd.wallet.sops.pw  service-account.json  service-account.sops.json  torrc
docker/: .env  bitcoin-cli  docker-compose.yml  lncli-alice  lncli-bob  lncli-carol  tt
docker/bitcoind/: Dockerfile
docker/lnd/: Dockerfile  entrypoint.sh  run.sh
docker/lnd-config/: lnd.conf
docker/rtl/: Dockerfile
docker/rtl-config/: RTL-Config.json
docker/tor/: Dockerfile  entrypoint.sh
docker/tor-config/: torrc
docs/: HELP.md  how-to-link-youtube.md  instruction-for-amo.md  scripts.md
donate4fun/: __init__.py  __main__.py  api.py  api_donation.py  api_github.py  api_social.py  api_twitter.py  api_utils.py  api_youtube.py  app.py  core.py  db.py  db_donations.py  db_github.py  db_libs.py  db_models.py  db_other.py  db_social.py  db_twitter.py  db_utils.py  db_withdraw.py  db_youtube.py  dev.py  dev_helpers.py  donate4fun_provider.py  donatees.py  donation.py  github.py  github_provider.py  jobs.py  lnd.py  mako.py  models.py  pubsub.py  screenshot.py  scripts.py  settings.py  social.py  twitter.py  twitter_bot.py  (+7 more)
donate4fun/static/: styles.css
donate4fun/templates/: donate.html  donatee.html  donation-done.html  donation-todo.html  donations.html  error.html  index.html  twitter-account-sharing.html  twitter-donation-sharing.html  unsupported.html
extensions/: .gitignore  donate4fun.user.js
extensions/chrome/: manifest.json
extensions/firefox/: background.html  manifest.json  static
extensions/src/: .eslintrc.cjs  Arrow2.svelte  Bolt.svelte  CHANGELOG.md  CommentTip.svelte  DonateYoutube.svelte  Option.svelte  Options.svelte  Popup.svelte  PopupHeader.svelte  PopupMain.svelte  PopupNoWebln.svelte  PopupSection.svelte  PopupTwitter.svelte  PopupYoutube.svelte  TwitterBolt.svelte  Window.svelte  background.html  background.js  common.js  contentscript.js  contentscript_loader.js  dff-bolt.js  font.css  globalobj.js  log.js  manifest-chrome.json  manifest-firefox.json  options-svelte.html  options.css  options.html  options.js  options.js.map  package-lock.json  package.json  pagescript.js  pnpm-lock.yaml  popup-svelte.js  popup.html  popup.js  (+9 more)
extensions/webext/: background.js  contentscript.js  manifest.json  options.html  options.js  style.css
frontend/: Dockerfile  entrypoint.sh  index-green.html  index.html  logs-prod.sh  nginx.conf  package.json  pnpm-lock.yaml  vite.config.js
frontend/public/: cookie-policy.html  privacy-policy.html  robots.txt
frontend/src/: App.svelte
polar/: docker-compose.yml  export.json
scripts/: bitcoin-cli.sh  check-balance.sql  check-total-donated-twitter.sql  claim-old-donations-twitter.sql  claim-old-donations-youtube.sql  create-tar-for-amo.sh  deploy-donate4fun.sh  deploy.sh  donation-list.sh  donations.sh  download-tar-for-amo.sh  forward-ports.sh  init-polar.sh  lncli.sh  lnurl-auth-login.py  logs.sh  make-icons.sh  mkv-to-mp4.sh  obtain-chrome-store-refresh-token.sh  pay.sh  psql.sh  publish-amo.py  publish-chrome.sh  restart-polar.sh  update-total-donated-twitter.sql  video-to-webp.sh  withdrawal-list.sh  withdrawals.sh
tests/: fixtures.py  mock_lnd.py  test_api.py  test_core.py  test_create_donation  test_db.py  test_github.py  test_twitter.py  test_util.py  test_web.py  test_youtube.py
tests/autofixtures/: create-donation-unsupported.yaml  create-donation-unsupported_target.yaml  create-donation-unsupported_youtube_url.yaml  create-donation.yaml  donate.yaml  donate_twitter_author.yaml  donate_twitter_tweet.yaml  donate_video.yaml  donate_youtube_channel.yaml  donate_youtube_video.yaml  donate_youtube_video_on_website.yaml  donation-invoice.yaml  donator-donations-received.yaml  donator-donations.yaml  donator-stats.yaml  get-donation.yaml  github-account-owned.yaml  index-page.yaml  latest-donations.yaml  lnauth-callback.yaml  lnauth-me-signin.yaml  lnauth-me-signup.yaml  oauth-flow-github-login-via-oauth-relogin.code  oauth-flow-github-login-via-oauth.code  oauth-flow-twitter-login-via-oauth-relogin.code  oauth-flow-twitter-login-via-oauth.code  oauth-redirect-toasts-github-login-via-oauth-relogin.yaml  oauth-redirect-toasts-github-login-via-oauth.yaml  oauth-redirect-toasts-twitter-login-via-oauth.yaml  oauth-redirect-toasts-twitter-login-via-oauth1-relogin.yaml  oauth-redirect-toasts-twitter-login-via-oauth1.yaml  payment-donate.yaml  payment-donation.yaml  payment-subscribe.yaml  query-donatee.yaml  query-donations.yaml  query-donator.yaml  recently-donated-donatees.yaml  sitemap.yaml  status.yaml  (+17 more)
tests/cassettes/: test_cancel_donation.yaml  test_cancel_donation_fail.yaml  test_create_donation.yaml  test_donate.yaml  test_donate_author.yaml  test_donate_from_balance.yaml  test_donate_full.yaml  test_donate_redirect.yaml  test_donate_to_lightning_address[sondreb@ln.tips].yaml  test_donate_tweet.yaml  test_donate_video.yaml  test_login_via_oauth.yaml  test_login_via_oauth1.yaml  test_login_via_oauth[None].yaml  test_query_or_fetch_twitter_account[params0].yaml  test_query_or_fetch_twitter_account[params1].yaml  test_query_or_fetch_twitter_account[params2].yaml  (+8 more)
(+272 files in other folders)
