[tool.poetry]
name = "donate4.fun"
version = "0.1.0"
description = ""
authors = ["Nikolay Bryskin <nbryskin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"
fastapi = "^0.77.1"
qrcode = {extras = ["pil"], version = "^7.3.1"}
uvicorn = "^0.17.6"
Jinja2 = "^3.1.2"
pymaging = {git = "https://github.com/ojii/pymaging.git"}
pymaging-png = {git = "https://github.com/ojii/pymaging-png.git"}
python-multipart = "^0.0.5"
PyYAML = "^6.0"
itsdangerous = "^2.1.2"
aiogoogle = "^4.1.0"
databases = {extras = ["asyncpg"], version = "^0.5.5"}
asyncpg = "^0.25.0"
hypercorn = {git = "https://github.com/nikicat/hypercorn"}
email-validator = "^1.2.1"
fastapi-debug-toolbar = "^0.2.1"
PyJWT = "^2.4.0"
Mako = "^1.2.0"
starlette-authlib = "^0.1.9"
multiavatar = "^1.0.3"
funkybob = {git = "https://github.com/nikicat/funkybob"}
setuptools = "^62.3.2"
lnurl = "^0.3.6"
bugsnag = "^4.2.1"
lightning-payencode = {git = "https://github.com/donate4fun/lightning-payencode"}
ecdsa = "^0.17.0"
rollbar = "^0.16.3"
pyinstrument = "^4.3.0"
alembic = "^1.8.1"
furl = "^2.1.3"
authlib = "^1.1.0"
glom = "^22.1.0"
playwright = "^1.28.0"
async-lru = "^1.0.3"

[tool.poetry.dev-dependencies]
ipython = "^8.3.0"
flake8 = "^4.0.1"
pytest = "^7.1.2"
SQLAlchemy-Utils = "^0.38.2"
anyio = "^3.6.1"
pytest-icdiff = "^0.5"
vcrpy = {git = "https://github.com/nikicat/vcrpy", branch = "fix-httpx-stub"}
pytest-vcr = "^1.0.2"
pytest-freezegun = "^0.4.2"
asgi-testclient = {git = "https://github.com/nikicat/asgi-testClient", rev = "fix-busy-loop"}
pytest-lazy-fixture = "^0.6.3"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = {git = "https://github.com/nikicat/pytest-asyncio"}
ascii-magic = "^1.6"
psutil = "^5.9.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flakehell]
format = "colored"
max_line_length = 130
