[tool.poetry]
name = "donate4.fun"
version = "0.1.0"
description = ""
authors = ["Nikolay Bryskin <nbryskin@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/donate4fun/donate4fun"
packages = [
  { include = "donate4fun" },
]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.23.0"
fastapi = "^0.77.1"
qrcode = {extras = ["pil"], version = "^7.3.1"}
uvicorn = "^0.17.6"
Jinja2 = "^3.1.2"
pymaging = {git = "https://github.com/ojii/pymaging.git"}
pymaging-png = {git = "https://github.com/ojii/pymaging-png.git"}
python-multipart = "^0.0.5"
PyYAML = "^6.0"
itsdangerous = "^2.1.2"
aiogoogle = "^4.1.0"
databases = {extras = ["asyncpg"], version = "^0.5.5"}
hypercorn = {git = "https://github.com/nikicat/hypercorn"}
email-validator = "^1.2.1"
fastapi-debug-toolbar = "^0.2.1"
PyJWT = "^2.4.0"
Mako = "^1.2.0"
starlette-authlib = "^0.1.9"
multiavatar = {git = "https://github.com/nikicat/multiavatar-python"}
funkybob = {git = "https://github.com/nikicat/funkybob"}
setuptools = "^65.5.1"
lnurl = "^0.3.6"
lightning-payencode = {git = "https://github.com/donate4fun/lightning-payencode"}
ecdsa = "^0.17.0"
rollbar = "^0.16.3"
pyinstrument = "^4.3.0"
alembic = "^1.8.1"
furl = "^2.1.3"
authlib = {git = "https://github.com/nikicat/authlib"}
glom = {git = "https://github.com/nikicat/glom"}
playwright = "^1.28.0"
async-lru = "^1.0.3"
google-cloud-logging = "^3.3.0"
py = "^1.11.0"
posthog = "^2.2.0"
jwskate = "^0.5.0"
sentry-sdk = "^1.13.0"
jwcrypto = "^1.4.2"
cairosvg = "^2.6.0"
bech32 = "^1.2.0"
vcrpy = {git = "https://github.com/nikicat/vcrpy", rev = "fix-httpx-stub"}
httpx-ws = "^0.3.0"
shellous = "^0.22.0"
asyncpg = "v0.27.0"

[tool.poetry.dev-dependencies]
ipython = "^8.3.0"
flake8 = "^4.0.1"
pytest = "^7.1.2"
SQLAlchemy-Utils = "^0.38.2"
anyio = "^3.6.1"
pytest-icdiff = "^0.5"
vcrpy = {git = "https://github.com/nikicat/vcrpy", branch = "fix-httpx-stub"}
pytest-freezegun = "^0.4.2"
asgi-testclient = {git = "https://github.com/nikicat/asgi-testClient", rev = "fix-busy-loop"}
pytest-lazy-fixture = "^0.6.3"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = {git = "https://github.com/nikicat/pytest-asyncio"}
psutil = "^5.9.4"
watchfiles = "^0.18.1"
coverage = "^7.0.2"
pytest-recording = "^0.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flakehell]
format = "colored"
max_line_length = 130

[tool.poetry.scripts]
donate4fun-cli = 'donate4fun.app:cli'

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:Inheritance class AiohttpSession from ClientSession is discouraged:DeprecationWarning",
# freezegun related
    "ignore:datetime.datetime size changed, may indicate binary incompatibility. Expected 48 from C header, got 64 from PyObject:RuntimeWarning",
    "ignore:datetime.date size changed, may indicate binary incompatibility. Expected 32 from C header, got 48 from PyObject:RuntimeWarning",
# https://github.com/ktosiek/pytest-freezegun/issues/35
    "ignore:distutils Version classes are deprecated. Use packaging.version instead:DeprecationWarning",
# Rollbar triggers warning in httpx and webob
    "ignore:Use 'content=<...>' to upload raw bytes/text content.:DeprecationWarning",
    "ignore:'cgi' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
# These errors occured in asyncpg after upgrading to 3.11
    "ignore:datetime.date size changed, may indicate binary incompatibility. Expected 32 from C header, got 40 from PyObject:RuntimeWarning",
    "ignore:datetime.datetime size changed, may indicate binary incompatibility. Expected 48 from C header, got 56 from PyObject:RuntimeWarning",
    # Nasty SQLAlchemy uber-warning. Remove after upgrading to 2.0
    "ignore:.*Deprecated API features detected! These feature\\(s\\) are not compatible with SQLAlchemy 2.0. To prevent incompatible upgrades prior to updating applications, ensure requirements files are pinned to .*. Set environment variable SQLALCHEMY_WARN_20=1 to show all deprecation warnings.  Set environment variable SQLALCHEMY_SILENCE_UBER_WARNING=1 to silence this message.*",
]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "freezed_vcr",
]
